# CUDA-Learn-Notes

./: .gitignore  .gitmodules  README.md  flash_attn.cc  flash_attn.cu  flash_attn.md  flash_attn.py  flash_attn_1_fwd_f32.cu  flash_attn_2_fwd_f32.cu  notes.cc  notes.py
.dev/: .gitignore  update_submodules.sh
cpp/how_to_build_cpp_static_lib/test_staticlib/: .gitignore  CMakeLists.txt  test.cc  test_a_inst.cc
cpp/how_to_build_cpp_static_lib/test_staticlib/liba/: func.cc  func.h  funca.cc  funca.h  global.cc
cpp/how_to_build_cpp_static_lib/test_staticlib/libb/: func.cc  func.h  funcb.cc  funcb.h
cpp/how_to_build_cpp_static_lib/test_staticlib/libc/: funcc.cc  funcc.h
cuda-check/: README.md  check.cu
cute/: .gitignore
dot-product/: .gitignore  README.md  dot_product.cu  dot_product.py
draw.io/: README.md  vllm-prefix-prefill-triton-kernel.drawio
elementwise/: README.md  elementwise.cu  elementwise.py
embedding/: embedding.cu  embedding.py
flash-attn/: README.md  flash_attn.cc  flash_attn.py  flash_attn_1_fwd_f32.cu  flash_attn_2_fwd_f16_mma_m16n8k16.cu  flash_attn_2_fwd_f32.cu  flash_attn_mma.cu  flash_attn_v2_fwd_f16_mma_m16n8k16.cu
gelu/: README.md  gelu.cu  gelu.py
hgemm/: .gitignore  README.md  hgemm.cu  hgemm.py  hgemm_async.cu  hgemm_cublas.cu  hgemm_mma.cu  hgemm_mma_stage.cu  hgemm_mma_stage_col_major.cu  hgemm_mma_stage_tn.cu  hgemm_mma_stage_tn_cute.cu  hgemm_wmma.cu  hgemm_wmma_stage.cu  makefile  prof.py  setup.py  utils.h
hgemv/: README.md  hgemv.cu  hgemv.py
histogram/: README.md  histogram.cu  histogram.py
kernels/: notes-v1.cu
layer-norm/: README.md  layer_norm.cu  layer_norm.py
mat-transpose/: mat_transpose.py
mat_transpose/: README.md  mat_transpose.cu  mat_transpose.py
nms/: nms.cu  nms.py
nvidia-nsight/: .gitignore  README.md  elementwise.cu  relu.cu
openai-triton/: prefix_prefill.py
reduce/: README.md  block_all_reduce.cu  block_all_reduce.py
relu/: README.md  relu.cu  (+1 more)
(+226 files in other folders)
